@@ -233,6 +233,9 @@ write_network_file(net_definition* def, const char* rootdir, const char* path)
     s = g_string_sized_new(200);
     append_match_section(def, s, TRUE);
 
+    if (def->optional)
+        g_string_append(s, "\n[Link]\nRequiredForOnline=no\n");
+
     g_string_append(s, "\n[Network]\n");
     if (def->dhcp4 && def->dhcp6)
         g_string_append(s, "DHCP=yes\n");
