@@ -9,6 +9,9 @@ nplan (0.32~16.04.4) UNRELEASED; urgency=medium
   * Fix syntax for IPv6 addresses in doc. (LP: #1735317)
   * doc: routes are not top-level but per-interface. (LP: #1726695)
   * Implement bridge port-priority parameter. (LP: #1735821)
+  * Implement "optional: true" to correctly write systemd network definitions
+    with "RequiredForOnline=false", such that these networks do not block boot.
+    (LP: #1664844)
 
  -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Wed, 10 Jan 2018 13:54:07 -0500
 
